chore: ajusta build Java 17 e frontend Vite